# langchain-trust-gate

./: README.md  pyproject.toml
src/langchain_trust_gate/: __init__.py  tool.py
tests/: test_tool.py
