[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-trust-gate"
version = "0.1.0"
description = "LangChain tools for Trust Gate post-quantum receipts (Ed25519 + ML-DSA-65, verifiable offline)."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Cyber Warrior Network", email = "apps@cyberwarriornetwork.com"}]
keywords = ["langchain", "mcp", "trust-gate", "post-quantum", "agent", "receipt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "langchain-core>=0.3",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/CWNApps/langchain-trust-gate"
"Trust Gate" = "https://trust-gate-mcp.onrender.com"
Smithery = "https://smithery.ai/servers/apps/cwn-trust-gate"
Source = "https://github.com/CWNApps/langchain-trust-gate"

[tool.setuptools.packages.find]
where = ["src"]
